Gateway-API/kubernetes/kong_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
  namespace: kong
spec:
  ports:
  - name: admin
    port: 8001
    protocol: TCP
    targetPort: 8001
    nodePort: 31001
  selector:
    app: ingress-kong
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kong-manager
  namespace: kong
spec:
  ports:
  - name: manager
    port: 8002
    protocol: TCP
    targetPort: 8002
    nodePort: 31002
  selector:
    app: ingress-kong
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kong-portal
  namespace: kong
spec:
  ports:
  - name: portal
    port: 8003
    protocol: TCP
    targetPort: 8003
    nodePort: 31003
  selector:
    app: ingress-kong
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kong-portal-api
  namespace: kong
spec:
  ports:
  - name: portalapi
    port: 8004
    protocol: TCP
    targetPort: 8004
    nodePort: 31004
  selector:
    app: ingress-kong
  type: NodePort
