Gateway-API/kubernetes/stock-conf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-stock-api-0
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: add-cors-g0, add-mocking-g1, add-key-auth-g2
spec:
  rules:
    - host: httpbin.org
      http:
        paths:
          - backend:
              service:
                name: market-stock-api-service-0
                port:
                  number: 80
            path: /anything/market/stock/historical
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-stock-api-1
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: add-request-validator-m3, add-cors-g0, add-mocking-g1, add-key-auth-g2
    konghq.com/override: get-method
spec:
  rules:
    - host: httpbin.org
      http:
        paths:
          - backend:
              service:
                name: market-stock-api-service-0
                port:
                  number: 80
            path: /anything/market/stock/closing/.*
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-stock-api-2
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: add-cors-g0, add-mocking-g1, add-key-auth-g2
spec:
  rules:
    - host: httpbin.backends
      http:
        paths:
          - backend:
              service:
                name: market-stock-api-service-1
                port:
                  number: 80
            path: /anything/market/stock/historical
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-stock-api-3
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: add-request-validator-m3, add-cors-g0, add-mocking-g1, add-key-auth-g2
    konghq.com/override: get-method
spec:
  rules:
    - host: httpbin.backends
      http:
        paths:
          - backend:
              service:
                name: market-stock-api-service-1
                port:
                  number: 80
            path: /anything/market/stock/closing/.*
            pathType: ImplementationSpecific
